fix: fix using mapper struct